[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Game.gd" type="Script" id=1]
[ext_resource path="res://Sprites/bg.png" type="Texture" id=2]
[ext_resource path="res://Sprites/board.png" type="Texture" id=3]
[ext_resource path="res://Sprites/blank.png" type="Texture" id=4]
[ext_resource path="res://Sprites/o.png" type="Texture" id=5]
[ext_resource path="res://Sprites/x.png" type="Texture" id=6]

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="objects" type="Node" parent="."]

[node name="bg" type="Sprite" parent="objects"]
position = Vector2( 300, 300 )
scale = Vector2( 1.42857, 1.42857 )
texture = ExtResource( 2 )

[node name="Banner" type="Label" parent="objects"]
modulate = Color( 0.0980392, 0.784314, 0.784314, 0.980392 )
margin_left = -2.0
margin_top = 11.2924
margin_right = 118.0
margin_bottom = 42.2924
rect_scale = Vector2( 5, 4 )
text = "Lets Play TicTicToe
"
align = 1
valign = 1

[node name="Turn_Label" type="Label" parent="objects"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 24.6065
margin_top = 108.679
margin_right = 64.6065
margin_bottom = 122.679
rect_scale = Vector2( 2, 2 )
text = "Player's Turn"

[node name="Score_Label" type="Label" parent="objects"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 384.637
margin_top = 68.7402
margin_right = 424.637
margin_bottom = 82.7402
rect_scale = Vector2( 2, 2 )
text = "X : O"

[node name="Board" type="Node2D" parent="objects"]
position = Vector2( 0, 1.52588e-05 )

[node name="board" type="Sprite" parent="objects/Board"]
position = Vector2( 295.636, 375.491 )
scale = Vector2( 1.01944, 1.01666 )
texture = ExtResource( 3 )

[node name="Buttons" type="GridContainer" parent="objects/Board"]
margin_left = 81.6711
margin_top = 161.002
margin_right = 689.671
margin_bottom = 769.002
rect_scale = Vector2( 0.7, 0.7 )
columns = 3

[node name="btn_1" type="TextureButton" parent="objects/Board/Buttons"]
margin_right = 200.0
margin_bottom = 200.0
texture_normal = ExtResource( 4 )

[node name="btn_2" type="TextureButton" parent="objects/Board/Buttons"]
margin_left = 204.0
margin_right = 404.0
margin_bottom = 200.0
texture_normal = ExtResource( 4 )

[node name="btn_3" type="TextureButton" parent="objects/Board/Buttons"]
margin_left = 408.0
margin_right = 608.0
margin_bottom = 200.0
texture_normal = ExtResource( 4 )

[node name="btn_4" type="TextureButton" parent="objects/Board/Buttons"]
margin_top = 204.0
margin_right = 200.0
margin_bottom = 404.0
texture_normal = ExtResource( 4 )

[node name="btn_5" type="TextureButton" parent="objects/Board/Buttons"]
margin_left = 204.0
margin_top = 204.0
margin_right = 404.0
margin_bottom = 404.0
texture_normal = ExtResource( 4 )

[node name="btn_6" type="TextureButton" parent="objects/Board/Buttons"]
margin_left = 408.0
margin_top = 204.0
margin_right = 608.0
margin_bottom = 404.0
texture_normal = ExtResource( 4 )

[node name="btn_7" type="TextureButton" parent="objects/Board/Buttons"]
margin_top = 408.0
margin_right = 200.0
margin_bottom = 608.0
texture_normal = ExtResource( 4 )

[node name="btn_8" type="TextureButton" parent="objects/Board/Buttons"]
margin_left = 204.0
margin_top = 408.0
margin_right = 404.0
margin_bottom = 608.0
texture_normal = ExtResource( 4 )

[node name="btn_9" type="TextureButton" parent="objects/Board/Buttons"]
margin_left = 408.0
margin_top = 408.0
margin_right = 608.0
margin_bottom = 608.0
texture_normal = ExtResource( 4 )

[node name="UI" type="Node" parent="."]

[node name="PanelContainer" type="PanelContainer" parent="UI"]
visible = false
margin_left = 2.0
margin_top = 24.0
margin_right = 602.0
margin_bottom = 574.0

[node name="Panel" type="Panel" parent="UI/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 593.0
margin_bottom = 543.0
__meta__ = {
"_edit_lock_": true
}

[node name="player1" type="Node2D" parent="UI/PanelContainer/Panel"]
position = Vector2( 0, -100.477 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="UI/PanelContainer/Panel/player1"]
margin_left = 17.0
margin_top = 254.889
margin_right = 80.0
margin_bottom = 268.889
rect_scale = Vector2( 2.5, 2 )
text = "Player 1 : "

[node name="name" type="LineEdit" parent="UI/PanelContainer/Panel/player1"]
margin_left = 176.0
margin_top = 245.396
margin_right = 287.0
margin_bottom = 269.396
rect_scale = Vector2( 2, 2 )

[node name="o" type="Sprite" parent="UI/PanelContainer/Panel/player1"]
position = Vector2( 481, 269 )
scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 5 )

[node name="player2" type="Node2D" parent="UI/PanelContainer/Panel"]
position = Vector2( 0, 4.43277 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="UI/PanelContainer/Panel/player2"]
margin_left = 17.0
margin_top = 254.889
margin_right = 80.0
margin_bottom = 268.889
rect_scale = Vector2( 2.5, 2 )
text = "Player 2 : "

[node name="name" type="LineEdit" parent="UI/PanelContainer/Panel/player2"]
margin_left = 176.0
margin_top = 245.396
margin_right = 287.0
margin_bottom = 269.396
rect_scale = Vector2( 2, 2 )

[node name="o" type="Sprite" parent="UI/PanelContainer/Panel/player2"]
position = Vector2( 481, 269 )
scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 6 )

[node name="Label" type="Label" parent="UI/PanelContainer/Panel"]
margin_left = 26.3713
margin_top = 66.8073
margin_right = 146.371
margin_bottom = 80.8073
rect_scale = Vector2( 2, 2 )
text = "Enter your names :"

[node name="Play" type="Button" parent="UI/PanelContainer/Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -105.352
margin_top = -82.1989
margin_right = 74.6483
margin_bottom = -19.1989
text = "Let's Play"

[node name="Toss" type="Button" parent="UI/PanelContainer/Panel"]
margin_left = 118.675
margin_top = 360.949
margin_right = 423.675
margin_bottom = 411.949
text = "Toss"

[node name="NameAlert" type="AcceptDialog" parent="UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -132.5
margin_top = -29.0
margin_right = 132.5
margin_bottom = 29.0
window_title = "Thehro !!!"
dialog_text = "Enter Player Names"

[node name="PlayAgain" type="PopupDialog" parent="UI"]
margin_left = 111.0
margin_top = 146.0
margin_right = 496.0
margin_bottom = 379.0

[node name="Exit" type="Button" parent="UI/PlayAgain"]
margin_left = 220.0
margin_top = 137.298
margin_right = 327.0
margin_bottom = 192.298
text = "Exit"

[node name="Again" type="Button" parent="UI/PlayAgain"]
margin_left = 56.0
margin_top = 137.371
margin_right = 161.0
margin_bottom = 192.371
text = "Play Again"

[node name="ResultLabel" type="Label" parent="UI/PlayAgain"]
margin_left = 149.263
margin_top = 29.5263
margin_right = 189.263
margin_bottom = 48.5263
rect_scale = Vector2( 2, 2 )

[connection signal="pressed" from="objects/Board/Buttons/btn_1" to="." method="_on_btn_1_pressed"]
[connection signal="pressed" from="objects/Board/Buttons/btn_2" to="." method="_on_btn_2_pressed"]
[connection signal="pressed" from="objects/Board/Buttons/btn_3" to="." method="_on_btn_3_pressed"]
[connection signal="pressed" from="objects/Board/Buttons/btn_4" to="." method="_on_btn_4_pressed"]
[connection signal="pressed" from="objects/Board/Buttons/btn_5" to="." method="_on_btn_5_pressed"]
[connection signal="pressed" from="objects/Board/Buttons/btn_6" to="." method="_on_btn_6_pressed"]
[connection signal="pressed" from="objects/Board/Buttons/btn_7" to="." method="_on_btn_7_pressed"]
[connection signal="pressed" from="objects/Board/Buttons/btn_8" to="." method="_on_btn_8_pressed"]
[connection signal="pressed" from="objects/Board/Buttons/btn_9" to="." method="_on_btn_9_pressed"]
[connection signal="pressed" from="UI/PanelContainer/Panel/Play" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="UI/PanelContainer/Panel/Toss" to="." method="_on_Toss_pressed"]
[connection signal="pressed" from="UI/PlayAgain/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="UI/PlayAgain/Again" to="." method="_on_Again_pressed"]
